--- a/madcuba-linesplot/example/L1517B.yaml
+++ b/madcuba-linesplot/example/L1517B.yaml
@@ -1,9 +1,10 @@
-figure size: [12, 6]
+figure size: [12,6]
 font size: 12
 label font size: 10
 rows: 3
 columns: 3
 
+horizontal axis: 'velocity'
 velocity limits: [[1, 9], [1, 9], [1, 9]]
 intensity limits: [[-0.04, 0.08], [-0.04, 0.08], [-0.15, 0.90]]
 transitions threshold: 'auto'
@@ -14,8 +15,12 @@ fit color: 'tab:red'
 gaussian fit: yes
 show transitions: yes
 show quantum numbers: no
-show all species transitions: no
+show all species transitions: yes
 show all species fit: no
+show main species transitions: yes
+show rest species transitions: yes
+mark transitions with lines: yes
+use common labels: no
 join subplots: yes
 
 figure titles:
@@ -32,7 +37,7 @@ species:
     fit: no
     title: "*CH3OCHO* A \n $7_{2,6}$ → $6_{2,5}$"
 - CH3OCH3:
-    file: '01'
+    file: ['01', '02']
     fit: no
     title: "*CH3OCH3* \n $3_{1,3}$ → $2_{0,2}$ AA \n $3_{1,3}$ → $2_{0,2}$ EE"
 - CH3CHO:
